--- a/project.config.json
+++ b/project.config.json
@@ -15,7 +15,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.4.3",
 	"appid": "wxab563a152f1d659c",
-	"projectname": "tiny_miniapp_new",
+	"projectname": "tiny_miniapp_git",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
