--- a/project.config.json
+++ b/project.config.json
@@ -38,7 +38,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 20,
+			"current": 22,
 			"list": [
 				{
 					"id": -1,
@@ -173,6 +173,13 @@
 					"name": "pingtai2",
 					"pathName": "pages/reserveGames/reserveGames",
 					"query": "activityId=2&source=platform",
+					"scene": null
+				},
+				{
+					"id": 22,
+					"name": "code",
+					"pathName": "pages/reserveGame/reserveGame",
+					"query": "activityId=3&encryptId=3",
 					"scene": null
 				}
 			]
