--- a/project.config.json
+++ b/project.config.json
@@ -38,14 +38,8 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 22,
+			"current": 23,
 			"list": [
-				{
-					"id": -1,
-					"name": "test",
-					"pathName": "pages/test/test",
-					"query": ""
-				},
 				{
 					"id": -1,
 					"name": "index",
@@ -162,14 +156,14 @@
 					"scene": null
 				},
 				{
-					"id": 20,
+					"id": 19,
 					"name": "pingtai",
 					"pathName": "pages/reserveGames/reserveGames",
-					"query": "activityId=2&source=platform",
+					"query": "activityId=3&source=platform",
 					"scene": null
 				},
 				{
-					"id": 21,
+					"id": 20,
 					"name": "pingtai2",
 					"pathName": "pages/reserveGames/reserveGames",
 					"query": "activityId=2&source=platform",
@@ -180,6 +174,20 @@
 					"name": "code",
 					"pathName": "pages/reserveGame/reserveGame",
 					"query": "activityId=3&encryptId=3",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "test",
+					"pathName": "pages/test/test",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "开宝箱",
+					"pathName": "pages/boxes/boxes",
+					"query": "",
 					"scene": null
 				}
 			]
